added refund policy

--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -18,7 +18,7 @@ import "../../index.scss";
 		<Navbar client:load lang="" path="" />
 		<main class="container">
 			<h1>Privacy Policy</h1>
-			<p>Last updated: February 17, 2024</p>
+			<p>Last updated: <em>December 20, 2024</em></p>
 			<p>
 				This Privacy Policy describes Our policies and procedures on the
 				collection, use and disclosure of Your information when You use
@@ -491,6 +491,71 @@ import "../../index.scss";
 				parent, We may require Your parent's consent before We collect
 				and use that information.
 			</p>
+
+			<h2 id="consumer-right-to-cancel">Consumer Right to Cancel</h2>
+			<p>
+				If you are a consumer, you have the right to cancel your
+				purchase within 14 days of completing the transaction, without
+				providing a reason.
+			</p>
+
+			<h2>Cancellation Process</h2>
+			<p>
+				To cancel your order, go to your <a
+					href="https://www.pdfequips.com/manage-account"
+					>manage-account</a
+				> page then cancel.
+			</p>
+
+			<h2>Refund Details</h2>
+			<p>If you cancel within the 14-day period:</p>
+			<ul>
+				<li>We will reimburse all payments received</li>
+				<li>
+					Reimbursement will be processed within 14 days of your
+					cancellation
+				</li>
+				<li>
+					We will use the same payment method as your original
+					transaction
+				</li>
+				<li>No additional fees will be charged for the refund</li>
+			</ul>
+
+			<h2>Exceptions to Cancellation</h2>
+			<p>The right to cancel does not apply to:</p>
+			<ul>
+				<li>
+					Digital content you have already downloaded or started
+					streaming
+				</li>
+				<li>Products from which you have already derived benefit</li>
+			</ul>
+
+			<h2>Additional Refund Conditions</h2>
+			<p>
+				Refunds for other cases are provided at our sole discretion and
+				may be refused if we find evidence of:
+			</p>
+			<ul>
+				<li>Fraud</li>
+				<li>Refund abuse</li>
+				<li>Manipulative behavior</li>
+			</ul>
+
+			<h2>Consumer Rights</h2>
+			<p>
+				This policy does not affect your statutory rights, particularly
+				for products that are:
+			</p>
+			<ul>
+				<li>Not as described</li>
+				<li>Faulty</li>
+				<li>Not fit for purpose</li>
+			</ul>
+
+			<p><em>Last updated: December 20, 2024</em></p>
+
 			<h2>Links to Other Websites</h2>
 			<p>
 				Our Service may contain links to other websites that are not
@@ -527,6 +592,6 @@ import "../../index.scss";
 				>.
 			</p>
 		</main>
-		<Footer lang="" title="privacy policy" />
+		<Footer lang="" title="Privacy Policy" />
 	</body>
 </html>
