fixed build issues

--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,4 @@
-@import "pdfequips-navbar/scss/navbar";
+@import "../node_modules/pdfequips-navbar/scss/_navbar.scss";
 
 // Define variables for colors and font sizes
 $primary-color: #007BFF;
